publications: fix nav align

--- a/assets/sass/pages/publication.sass
+++ b/assets/sass/pages/publication.sass
@@ -2,7 +2,8 @@
     .page-publications
         .grid
             >
-                .content
+                .content,
+                nav
                     grid-column: 1/8
                 .sidebar
                     grid-column: 9/13
